force-app/volunteers/objects/VolunteerPositionAssignment__c/VolunteerPositionAssignment__c.object-meta.xml
<CustomObject>
    <label>Volunteer Position Assignment</label>
    <nameField>
        <displayFormat>PositionAssignment-{0000}</displayFormat>
        <label>Volunteer Position Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Position Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>