force-app/volunteers/objects/VolunteerPositionAssignment__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>AND(NOT(ISBLANK(TEXT(Status__c))), CONTAINS($CustomMetadata.AssignmentStatusMapping__mdt.VolunteerPositionAssignmentStatus.CompletedValues__c, TEXT(Status__c)))</formula>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>