force-app/volunteers/objects/VolunteerPositionAssignment__c/fields/VolunteerPosition__c.field-meta.xml
<CustomField>
    <fullName>VolunteerPosition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer Position</label>
    <referenceTo>VolunteerPosition__c</referenceTo>
    <relationshipLabel>Volunteer Position Assignments</relationshipLabel>
    <relationshipName>VolunteerPositionAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>