force-app/volunteers/objects/VolunteerPositionAssignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VolunteerPosition__c</columns>
    <columns>VolunteerContact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>