force-app/volunteers/objects/VolunteerPositionAssignment__c/listViews/Open_Applications.listView-meta.xml
<ListView>
    <fullName>Open_Applications</fullName>
    <columns>NAME</columns>
    <columns>VolunteerContact__c</columns>
    <columns>VolunteerPosition__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </filters>
    <label>Open Applications</label>
</ListView>